fix: table's scrollbar stylized

--- a/exercise3/style/table.style.css
+++ b/exercise3/style/table.style.css
@@ -1,3 +1,27 @@
+.sec-2::-webkit-scrollbar {
+  width: 10px;
+}
+
+.sec-2::-webkit-scrollbar-track {
+  background: none;
+}
+
+.sec-2::-webkit-scrollbar-thumb {
+  background-color: #f3f3f3;
+}
+
+.sec-2::-webkit-scrollbar-thumb:hover {
+  background: rgba(140, 62, 241, 1);
+}
+
+.sec-2::-webkit-scrollbar-thumb,
+.sec-2::-webkit-scrollbar-thumb:hover {
+  border: 3px solid rgba(0, 0, 0, 0);
+  border-top: 20px solid rgba(0, 0, 0, 0);
+  border-bottom: 20px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+}
+
 .table {
   border-collapse: separate;
   border: 1px solid white;
